# npp-themes

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  FULL_WINDOW_THEMING_PLAN.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: profile-schema-v2.md  recovery.md  threat-model.md
docs/adr/: 0001-supported-plugin-boundary.md
docs/compatibility/: README.md
docs/shell/: baseline-qualification.md  surface-inventory.md  upstream-strategy.md
docs/user-guide/: README.md
include/nppthemes/: ShellPalette.h  ThemeProfile.h
shared/NppThemesCore/: README.md
shared/NppThemesCore/include/nppthemes/: ThemeProfile.h  ThemeXmlCompiler.h
shared/NppThemesCore/src/: ShellPalette.cpp  ThemeXmlCompiler.cpp
shared/NppThemesCore/tests/fixtures/: profile-v2.json
src/: ShellPalette.cpp  ThemeProfile.cpp
src/core/: ShellPalette.cpp  ThemeProfile.cpp
src/plugin/: Application.cpp  Application.h  CommandPalette.cpp  CommandPalette.h  HostAdapter.cpp  HostAdapter.h  NppThemes.rc  PluginMain.cpp  SettingsStore.cpp  SettingsStore.h  ShellBridge.cpp  ShellBridge.h  ThemeStudio.cpp  ThemeStudio.h  WorkspaceState.h  resource.h
tests/: core_tests.cpp  host_adapter_tests.cpp  settings_store_tests.cpp  shell_bridge_tests.cpp  shell_palette_tests.cpp
tests/fixtures/: profile-v2.expected.json
tools/: package.ps1  shell-conformance.cpp  test-package.ps1  test-portable-host.ps1
